# fhe-pred

./: CMakeLists.txt  README.md  cli.py  config.json  data_preparation.py  fhe_inference.py  main.cpp  model.joblib  model_training.py  requirements.txt  scaler.joblib  secret_key  setup.py
